// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`righttp righttp should combine url, init and options 1`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "init": Object {
        "bar": true,
        "headers": Object {
          "Accept": "application/json",
          "Content-Type": "application/json",
        },
        "method": "GET",
      },
      "options": Object {
        "baz": true,
        "resolveAs": "JSON",
      },
      "url": "foo",
    },
  },
]
`;

exports[`righttp righttp should preset our API 1`] = `
Array [
  Array [
    [Function],
  ],
]
`;

exports[`righttp righttp should preset our API 2`] = `
Array [
  Array [
    Object {
      "init": Object {
        "bar": true,
        "headers": Object {
          "Accept": "application/json",
          "Content-Type": "application/json",
        },
        "method": "GET",
      },
      "options": Object {
        "baz": true,
        "resolveAs": "JSON",
      },
      "url": "foo",
    },
  ],
]
`;

exports[`righttp righttp should preset our API 3`] = `
Array [
  Object {
    "type": "return",
    "value": [Function],
  },
]
`;
